--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       #screen { width: 100%; height: 100%; }
     </style>
   </head>
-  <body onload="init()" style="background-color:#2b2b2b">
+  <body onload="init()">
     <figure style="overflow:visible;" id="qtspinner">
       <center style="margin-top:1.5em; line-height:150%">
-        <img src="LOGO.svg" width="320" height="200" style="display:block"></img>
-        
+        <img src="qtlogo.svg" width="320" height="200" style="display:block"></img>
+        <strong>Qt for WebAssembly: Zymmer</strong>
         <div id="qtstatus"></div>
         <noscript>JavaScript is disabled. Please enable JavaScript to use this application.</noscript>
       </center>
@@ -40,7 +40,6 @@
                   spinner.style.display = 'block';
                   canvas.style.display = 'none';
                   status.innerHTML = loaderStatus + "...";
-                  status.style.color='white'
               },
               showError: function(errorText) {
                   status.innerHTML = errorText;
