--- a/index.html
+++ b/index.html
@@ -14,21 +14,44 @@
       /* Make the html body cover the entire (visual) viewport with no scroll bars. */
       html, body { padding: 0; margin: 0; overflow: hidden; height: 100% }
       #screen { width: 100%; height: 100%; }
+
+    #Progress_Status {
+      width: 25%;
+      background-color: #2b2b2b;
+      margin-left: auto;
+      margin-right: auto;
+      border-width:1px;
+      border-style:solid;
+      border-color: white;
+    }
+
+    #progressBar {
+      width: 2%;
+      height: 20px;
+      background-color: white;
+    }
     </style>
   </head>
-  <body onload="init()">
+  <body onload="init()" style="background-color:#2b2b2b">
     <figure style="overflow:visible;" id="qtspinner">
       <center style="margin-top:1.5em; line-height:150%">
-        <img src="qtlogo.svg" width="320" height="200" style="display:block"></img>
-        <strong>Qt for WebAssembly: Zymmer</strong>
-        <div id="qtstatus"></div>
+        <img src="LOGO.svg" width="320" height="200" style="display:block"></img>
+        
+
+
         <noscript>JavaScript is disabled. Please enable JavaScript to use this application.</noscript>
       </center>
     </figure>
     <div id="screen"></div>
 
+    <div id="Progress_Status" >
+      <div id="progressBar"></div>
+    </div>
+
+
     <script type='text/javascript'>
-        let qtLoader = undefined;
+
+       let qtLoader = undefined;
         function init() {
           var spinner = document.querySelector('#qtspinner');
           var canvas = document.querySelector('#screen');
@@ -40,6 +63,8 @@
                   spinner.style.display = 'block';
                   canvas.style.display = 'none';
                   status.innerHTML = loaderStatus + "...";
+                  status.style.color='white'
+
               },
               showError: function(errorText) {
                   status.innerHTML = errorText;
@@ -62,6 +87,7 @@
           });
           qtLoader.loadEmscriptenModule("Zymmer");
       }
+
     </script>
     <script type="text/javascript" src="qtloader.js"></script>
   </body>
