--- a/index.html
+++ b/index.html
@@ -23,13 +23,24 @@
       border-width:1px;
       border-style:solid;
       border-color: white;
+      position: relative;
     }
 
     #progressBar {
       width: 2%;
       height: 20px;
       background-color: white;
+
     }
+    #percent{
+
+        text-align:center;
+        position: absolute;
+        text-shadow: 0 0 3px white, 0 0 5px white;
+
+
+    }
+
     </style>
   </head>
   <body onload="init()" style="background-color:#2b2b2b">
@@ -45,6 +56,7 @@
     <div id="screen"></div>
 
     <div id="Progress_Status" >
+        <center><label id="percent">0%</label></center>
       <div id="progressBar"></div>
     </div>
 
